bpo-30797, bpo-30694: Avoid _GNU_SOURCE redefined warning in xmlparse.c